--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
          <meta charset="utf-8">
-         <title>A </title>
+         <title>A simple Galgame</title>
     </head>
     <body>
         
