--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
          <meta charset="utf-8">
-         <title>A simple Galgame</title>
+         <title>根</title>
+         <script type="text/javascript" src="script/env.js"></script>
+         <script type="text/javascript" src="script/splash.js"></script>
     </head>
     <body>
-        
+        <button></button>
+        <div style="height: 100px; width: 100px; background-color: blue;" id="test"></div>
     </body>
 </html>
