--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
          <title>根</title>
          <script type="text/javascript" src="script/env.js"></script>
          <script type="text/javascript" src="script/splash.js"></script>
+         <link rel="stylesheet" type="text/css" href="style/splash.css">
+         <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
     <body>
         <button></button>
-        <div style="height: 100px; width: 100px; background-color: blue;" id="test"></div>
     </body>
 </html>
