--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
          <link rel="stylesheet" type="text/css" href="style/splash.css">
          <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
-    <body>
-        <button></button>
+    <body id="body">
+        <div id="form">
+            <button onclick="test()"></button>
+        </div>
     </body>
 </html>
