--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
          <meta charset="utf-8">
          <title>根</title>
          <script type="text/javascript" src="script/env.js"></script>
+         <script type="text/javascript" src="script/scenes.js"></script>
          <script type="text/javascript" src="script/splash.js"></script>
          <link rel="stylesheet" type="text/css" href="style/splash.css">
          <link rel="stylesheet" type="text/css" href="style/scene1.css">
