--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
          <script type="text/javascript" src="script/env.js"></script>
          <script type="text/javascript" src="script/scenes.js"></script>
          <script type="text/javascript" src="script/splash.js"></script>
+         <script type="text/javascript" src="script/scene1.js"></script>
+         <link rel="stylesheet" type="text/css" href="style/env.css">
          <link rel="stylesheet" type="text/css" href="style/splash.css">
          <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
-    <body id="body">
-        <div id="form">
-            <button onclick="test()"></button>
-        </div>
+    <body id="body" onload="splash()">
+        <div id="form"></div>
+        <button onclick="splash()"></button>
     </body>
 </html>
