Finish Splash Screen

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
          <title>根</title>
          <script type="text/javascript" src="script/env.js"></script>
          <script type="text/javascript" src="script/scenes.js"></script>
-         <script type="text/javascript" src="script/splash.js"></script>
          <link rel="stylesheet" type="text/css" href="style/env.css">
-         <link rel="stylesheet" type="text/css" href="style/splash.css">
          <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
     <body id="body" onload="splash()">
         <div id="form"></div>
-        <button onclick="splash()"></button>
+        <button onclick="splash()">Test</button>
     </body>
 </html>
