--- a/home.html
+++ b/home.html
@@ -9,10 +9,14 @@
         <style>
             #label{
                 color:white ;
+                font-size: 100px;
+                position: absolute;
+                left:350px;
+                top:100px;
             }
         </style>
     </head>
     <body>
-        <div id="label">sdfsdfsdfsdf</div>
+        <div id="label">根</div>
     </body>
 </html>
