--- a/home.html
+++ b/home.html
@@ -3,20 +3,16 @@
     <head>
         <meta charset="utf-8">
 	    <script type="text/javascript" src="script/env.js"></script>
+        <link rel="stylesheet" type="text/css" href="style/env.css">
+        <link rel="stylesheet" type="text/css" href="style/home.css">
         <script>
 
         </script>
-        <style>
-            #label{
-                color:white ;
-                font-size: 100px;
-                position: absolute;
-                left:350px;
-                top:100px;
-            }
-        </style>
     </head>
     <body>
         <div id="label">根</div>
+        <div class="button font" style="bottom: 340px;">開始新遊戲</div>
+        <div class="button font" style="bottom: 270px;">章節選擇</div>
+        <div class="button font" style="bottom: 200px;">設定</div>
     </body>
 </html>
