Finished scene1+seperated script&start building sh*t mountain

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          <link rel="stylesheet" type="text/css" href="style/env.css">
          <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
-    <body id="body" onload="splash()">
+    <body id="body" onload="splash()" style="overflow: hidden">
         <div id="form"></div>
         <button onclick="splash()">Test</button>
     </body>
