fixed overflow and gray page in github.io

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
         </script>
     </head>
-    <body id="form" style="overflow: hidden">
+    <body id="home" class="body">
         <div id="label">根</div>
         <div class="button font" style="bottom: 340px;" onclick="gameStart()">開始新遊戲</div>
         <div class="button font" style="bottom: 270px;">章節選擇</div>
