--- a/scene1.html
+++ b/scene1.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="stories/scene1.js"></script>
         <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
-    <body>
+    <body class="body inPage">
         <div id="text">
         <p id="text"></p>    
         <script>
