--- a/splash.html
+++ b/splash.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="script/splash.js"></script>
 	<link rel="stylesheet" type="text/css" href="style/splash.css">
 </head>
-<body onload="splashAni()">
+<body onload="splashAni()" class="body">
 	<img class="imgs" id="splash1" src="resource/splash1.jpg">
 </body>
 </html>
