added Animation in home.html,gamestart log,organize directories

--- a/resource/scenes/scene1.html
+++ b/resource/scenes/scene1.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script type="text/javascript" src="script/env.js"></script>
-        <script type="text/javascript" src="stories/scene1.js"></script>
-        <link rel="stylesheet" type="text/css" href="style/scene1.css">
+        <script type="text/javascript" src="/script/env.js"></script>
+        <script type="text/javascript" src="../stories/scene1.js"></script>
+        <link rel="stylesheet" type="text/css" href="/style/scene1.css">
     </head>
     <body class="body inPage">
         <div id="text">
