--- a/resource/scenes/home.html
+++ b/resource/scenes/home.html
@@ -2,13 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-	    <script type="text/javascript" src="script/env.js"></script>
-        <script type="text/javascript" src="script/scenes.js"></script>
-        <link rel="stylesheet" type="text/css" href="style/env.css">
-        <link rel="stylesheet" type="text/css" href="style/home.css">
-        <script>
-
-        </script>
+	    <script type="text/javascript" src="/script/env.js"></script>
+        <script type="text/javascript" src="/script/scenes.js"></script>
+        <link rel="stylesheet" type="text/css" href="/style/env.css">
+        <link rel="stylesheet" type="text/css" href="/style/home.css">
     </head>
     <body id="home" class="body">
         <div id="label">根</div>
