Revert "fixed overflow and gray page in github.io"
This reverts commit e5dd06482e9d864d3b7eb0f6a06ad5ae0d45c20f.

--- a/home.html
+++ b/home.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-	    <script type="text/javascript" src="/script/env.js"></script>
-        <script type="text/javascript" src="/script/scenes.js"></script>
-        <link rel="stylesheet" type="text/css" href="/style/env.css">
-        <link rel="stylesheet" type="text/css" href="/style/home.css">
+	    <script type="text/javascript" src="script/env.js"></script>
+        <script type="text/javascript" src="script/scenes.js"></script>
+        <link rel="stylesheet" type="text/css" href="style/env.css">
+        <link rel="stylesheet" type="text/css" href="style/home.css">
+        <script>
+
+        </script>
     </head>
-    <body id="form" style="overflow: hidden">
+    <body id="home" class="body">
         <div id="label">根</div>
         <div class="button font" style="bottom: 340px;" onclick="gameStart()">開始新遊戲</div>
         <div class="button font" style="bottom: 270px;">章節選擇</div>
