--- a/scene1.html
+++ b/scene1.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script type="text/javascript" src="/script/env.js"></script>
-        <script type="text/javascript" src="../stories/scene1.js"></script>
-        <link rel="stylesheet" type="text/css" href="/style/scene1.css">
+        <script type="text/javascript" src="script/env.js"></script>
+        <script type="text/javascript" src="stories/scene1.js"></script>
+        <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
-    <body>
+    <body class="body inPage">
         <div id="text">
         <p id="text"></p>    
         <script>
