--- a/scene1.html
+++ b/scene1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script type="text/javascript" src="script/env.js"></script>
-        <script type="text/javascript" src="stories/scene1.js"></script>
+        <script type="text/javascript" src="resource/stories/scene1.js"></script>
         <link rel="stylesheet" type="text/css" href="style/scene1.css">
     </head>
     <body class="body inPage">
