--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <body id="home" class="body">
         <div id="label">根</div>
         <div class="button font" style="bottom: 340px;" onclick="gameStart()">開始新遊戲</div>
-        <div class="button font" style="bottom: 270px;">章節選擇</div>
+        <div class="button font" style="bottom: 270px;" onclick="tutorial()">章節選擇</div>
         <div class="button font" style="bottom: 200px;">設定</div>
     </body>
 </html>
