--- a/tutorial.html
+++ b/tutorial.html
@@ -34,11 +34,19 @@
                 left: 25px;
                 top: 75px;
             }
+            #boat{
+                height:155px;
+                width:80px;
+                position:relative;
+                left:357px;
+                background-color: rgb(230, 136, 14);
+                border:solid black 5px;
+            }
         </style>
     </head>
     <body class="body">
         <div class="hint" id="hint1">使用<br>W,A,S,D<br>以移動</div>
         <div id="road"></div>
-        <div id="sea"></div>
+        <div id="sea"><div id="boat"></div></div>
     </body>
 </html>
