--- a/ui.html
+++ b/ui.html
@@ -19,10 +19,12 @@
     </head>
     <body class="body" id="body" tabindex="0" onload="init()" onkeydown="move(event)" onkeyup="">
         <div id="box" class="font"></div>
+        <div id="font" class="font"></div>
         <div id="innerBody">
             <object type="text/html" data="tutorial.html" width="800px" height="1600px" id="tutorial" style="visibility: hidden;"></object>
             <img src="resource/djland.png" id="djland" style="visibility: hidden;position: absolute;">
         </div>
         <div id="char"></div>
+        <div id="dialog"><div id="text"></div></div>
     </body>
 </html>
