--- a/ui.html
+++ b/ui.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="style/ui.css">
         <script>
             var char={x:0,y:400},key={"w":0,"a":0,"s":0,"d":0},border={yMax:25565,yMin:-25565,xMax:25565,xMin:-25565}
-            var map="",status=0
+            var map="",status=0,scene3status=0
             function init(){
                 get("body").focus();
                 if(status==0){
@@ -23,6 +23,7 @@
         <div id="innerBody">
             <object type="text/html" data="tutorial.html" width="800px" height="1600px" id="tutorial" style="visibility: hidden;"></object>
             <img src="resource/djland.png" id="djland" style="visibility: hidden;position: absolute;">
+            <img src="resource/WIP.png" id="WIP" style="visibility: hidden;position: absolute;">
         </div>
         <div id="char"></div>
         <div id="dialog"><div id="text"></div></div>
