--- a/puzzle.html
+++ b/puzzle.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="utf-8">
         <script type="text/javascript" src="script/env.js"></script>
+        <script type="text/javascript" src="script/puzzle.js"></script>
         <link rel="stylesheet" type="text/css" href="style/env.css">
         <link rel="stylesheet" type="text/css" href="style/puzzle.css">
         <link rel="stylesheet" type="text/css" href="style/ui.css">
     </head>
-    <body class="body">
-        <div id="tutorial1" class="font">請在各個欄位中鍵入1~9中的其中一數以解鎖箱子</div>
-        <div id="ans" class="square1 font"><input type="number" min="1" max="9" id="a"></div>
-        <div id="ans" class="square2 font"><input type="number" min="1" max="9" id="b"></div>
-        <div id="ans" class="square3 font"><input type="number" min="1" max="9" id="c"></div>
-        <button id="button" onclick="guess()">解鎖</button>
+    <body class="body" onload="Rndnum();">
+        <div id="caption" class="font">在各個欄位中放入1~9中的其中一數以解鎖箱子<br>紅色=數字太大!<br>黃色=數字太小!<br>綠色=正解!</div>
+        <div id="ans1" class="font"><input type="number" min="1" max="9" id="a"></div>
+        <div id="ans2" class="font"><input type="number" min="1" max="9" id="b"></div>
+        <div id="ans3" class="font"><input type="number" min="1" max="9" id="c"></div>
+        <button id="button" onclick="guess();">解鎖</button>
+        <div id="unlock" class="font" style="visibility:hidden">成功解鎖</div>
     </body>
 </html>
