--- a/puzzle0.html
+++ b/puzzle0.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <script type="text/javascript" src="script/env.js"></script>
-        <script type="text/javascript" src="script/puzzle.js"></script>
+        <script type="text/javascript" src="script/puzzle0.js"></script>
         <link rel="stylesheet" type="text/css" href="style/env.css">
-        <link rel="stylesheet" type="text/css" href="style/puzzle.css">
+        <link rel="stylesheet" type="text/css" href="style/puzzle0.css">
         <link rel="stylesheet" type="text/css" href="style/ui.css">
     </head>
     <body class="body" onload="Rndnum();">
-        <div id="caption" class="font">在各個欄位中放入1~9中的其中一數以解鎖箱子<br>紅色=數字太大!<br>黃色=數字太小!<br>綠色=正解!</div>
+        <div id="caption" style="visibility: visible;color: white;">在各個欄位中放入1~9中的其中一數以解鎖箱子<br>紅色=數字太大!<br>黃色=數字太小!<br>綠色=正解!</div>
         <div id="ans1"><input type="number" min="1" max="9" id="a" class="input"></div>
         <div id="ans2"><input type="number" min="1" max="9" id="b" class="input"></div>
         <div id="ans3"><input type="number" min="1" max="9" id="c" class="input"></div>
